# thor-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  run_thor_bench.sh
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: sweep-reform.md
bench/suites/compute/: cublas_bench.cu  cublas_bench.h  fp4_bench.cu  fp4_bench.h  fp64_tensor_bench.cu  fp64_tensor_bench.h  fp8_scalar_bench.cu  fp8_scalar_bench.h  int8_scalar_bench.cu  int8_scalar_bench.h  int8_tensor_bench.cu  int8_tensor_bench.h  memory_bench.cu  memory_bench.h  sasp_bench.cu  sasp_bench.h  sm_compute_bench.cu  sm_compute_bench.h  tcgen05_fp16_bench.cu  tcgen05_fp16_bench.h  tcgen05_fp8_bench.cu  tcgen05_fp8_bench.h  tensor_bench.cu  tensor_bench.h  tmem_bench.cu  tmem_bench.h
bench/suites/cpu/: arm_compute_bench.cpp  arm_compute_bench.h  arm_neon_bench.cpp  arm_neon_bench.h  arm_sve2_bench.cpp  arm_sve2_bench.h
bench/suites/decode/: av1_decode_bench.cpp  av1_decode_bench.h  h264_decode_bench.cpp  h264_decode_bench.h  hevc_decode_bench.cpp  hevc_decode_bench.h
bench/suites/encode/: h264_encode_bench.cpp  h264_encode_bench.h  hevc_encode_bench.cpp  hevc_encode_bench.h  nvjpeg_bench.cpp  nvjpeg_bench.h
bench/suites/memory/: l2_cache.cu  l2_cache.h  shared_carveout_bench.cu  shared_carveout_bench.h  tegra_memory.cu  tegra_memory.h  tma_copy.cu  tma_copy.h  unified_memory.cu  unified_memory.h
bench/suites/sync/: atomic_bench.cu  atomic_bench.h  cluster_sync.cu  cluster_sync.h  kernel_launch.cu  kernel_launch.h  mbarrier.cu  mbarrier.h  warp_primitives.cu  warp_primitives.h
bench/suites/system/: allocator_latency_bench.cu  allocator_latency_bench.h  host_device_transfer.cu  host_device_transfer.h  mig_bench.cpp  mig_bench.h  multi_stream_bench.cu  multi_stream_bench.h  pcie_bench.cu  pcie_bench.h  thermal_throttle.cu  thermal_throttle.h
build2/: CMakeCache.txt  seccomp_clone3  thor_bench_impl
docs/: PLAN.md
src/: bench_runner.cpp  bench_suites.cpp  benchmark_main.cpp  clone3_workaround.c  cupti_profiler.cu  cupti_profiler_stub.cpp  nocudaextend.c  power_monitor.cpp  seccomp_clone3.c  sweep_runner.cpp  thor_bench_wrapper.c
src/include/: bench_csv_formatter.h  bench_json_serializer.h  bench_peaks.h  bench_runner.h  bench_schema.h  bench_stats.h  bench_suites.h  bench_text_formatter.h  cupti_profiler.h  power_monitor.h  sweep_runner.h  sweep_schema.h
src/output/: bench_csv_formatter.cpp  bench_json_serializer.cpp  bench_text_formatter.cpp
